# repo-summary-post

./: .env  CHANGES.rst  README.rst  action.yml  mypy.ini  pr_summary_template.j2  pyproject.toml  requirements.in  requirements.txt  run-lint.sh  run-tests.sh  summarize_prs.py
.github/scripts/: summarize_prs.py
.github/workflows/: activity-summary.yml  test-models.yml  weekly-pr-summary.yml
src/repo_summary_post/: __init__.py  __main__.py  ai_summary_template.j2  caching.py  github_utils.py  llm_prompt.j2  llm_prompt.txt  logging_utils.py  pr_summary_template.j2  summary_generation.py
src/tests/: test_summarize_prs.py
