[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_summary_post"
version = "0.1.0"
description = "A tool to summarize GitHub repository activity"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
summarize-repo-activity = "repo_summary_post.__main__:main"

[tool.setuptools.dynamic]
# requirements.in is compiled to requirements.txt by `pip-compile`
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
test = ["pytest"]
lint = ["black", "codespell", "darker", "graylint", "isort", "mypy", "ruff", "yamllint"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_summary_post = ["*.j2"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "D203",  # One blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end with a period (duplicates D415)
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "C408",  # Unnecessary `dict` call (rewrite as a literal)
    "S101",  # Use of `assert` detected
]

[tool.ruff.lint.isort]
known-first-party = []
known-third-party = ["pytest"]
